--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,24 +1,35 @@
 server:
-  port: 8082
+  port: 8085
 
 spring:
   data:
     mongodb:
-      uri: mongodb://ym:123456@120.79.192.122:27017/admin
+      uri: mongodb://ym:123456@10.28.1.85:27018,10.28.1.85:27017,10.28.1.85:27019/mydb
+#      uri: mongodb://ym:123456@192.168.31.147:27017,192.168.31.147:27018,192.168.31.147:27019/mydb
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driverClassName: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/carabao?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
-    username: root
-    password: 123456
-    druid:
-      max-active: 20
-      initial-size: 10
-      min-idle: 10
-      max-wait: 60000
-      time-between-eviction-runs-millis: 60000
-      filters: stat,wall,slf4j
-      max-open-prepared-statements: 20
+    driverClassName: com.mysql.jdbc.Driver
+    dynamic:
+      primary: master #设置默认的数据源或者数据源组,默认值即为master
+      druid:
+        max-active: 20
+        initial-size: 10
+        min-idle: 10
+        max-wait: 60000
+        time-between-eviction-runs-millis: 60000
+        filters: stat,wall,slf4j
+#        max-open-prepared-statements: 20
+      datasource:
+        master:
+          username: root
+          password: 123456
+          driver-class-name: com.mysql.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/carabao_reset?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+        slave:
+          username: root
+          password: 123456
+          driver-class-name: com.mysql.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/carabao_reset?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
   jackson:
     # 设置不给前端返回null字段
     default-property-inclusion: non_null
@@ -29,6 +40,11 @@ logging:
   file: logs/mongo.log
   level:
     com.carabao.statistics.mapper: debug
+    org:
+      springframework:
+        data:
+          mongodb:
+            core: error
     root: info
   pattern:
     file: '[mongo] %d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{50} - %msg%n'
